[Fix] Fixed opacity misinterpreted by browser + changed color of text to make it readable

--- a/src/components/PlanEditor.module.scss
+++ b/src/components/PlanEditor.module.scss
@@ -6,4 +6,12 @@
   color: #263238;
   min-width: 100%;
   overflow-y: scroll;
+
+  li {
+    color: #000000;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
